{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 63,
  "lineage": "07acf4c2-a602-5b6b-7888-1130f89d0e37",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-017cd2ed37009788a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021847444320:subnet/subnet-017cd2ed37009788a",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 4017,
            "cidr_block": "10.0.144.0/20",
            "default_for_az": false,
            "enable_dns64": true,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": true,
            "id": "subnet-017cd2ed37009788a",
            "ipv6_cidr_block": "2600:1f18:766a:2a03::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0c109d381142ee58a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021847444320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "platform-private-us-east-1a",
              "kubernetes.io/cluster/platform-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "subnet/kind": "private"
            },
            "vpc_id": "vpc-0353c425617006396"
          }
        },
        {
          "index_key": "subnet-03d477ce9b36dc32b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021847444320:subnet/subnet-03d477ce9b36dc32b",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 4048,
            "cidr_block": "10.0.176.0/20",
            "default_for_az": false,
            "enable_dns64": true,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": true,
            "id": "subnet-03d477ce9b36dc32b",
            "ipv6_cidr_block": "2600:1f18:766a:2a05::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-066137a68dc26120c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021847444320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "platform-private-us-east-1c",
              "kubernetes.io/cluster/platform-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "subnet/kind": "private"
            },
            "vpc_id": "vpc-0353c425617006396"
          }
        },
        {
          "index_key": "subnet-0dfa278a3be4a4474",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021847444320:subnet/subnet-0dfa278a3be4a4474",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 4048,
            "cidr_block": "10.0.160.0/20",
            "default_for_az": false,
            "enable_dns64": true,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": true,
            "id": "subnet-0dfa278a3be4a4474",
            "ipv6_cidr_block": "2600:1f18:766a:2a04::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-017dc1d93d4804ba8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021847444320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "platform-private-us-east-1b",
              "kubernetes.io/cluster/platform-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "subnet/kind": "private"
            },
            "vpc_id": "vpc-0353c425617006396"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021847444320:vpc/vpc-0353c425617006396",
            "cidr_block": "10.0.128.0/18",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0544ddbdd9370ac75",
                "cidr_block": "10.0.128.0/18",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-07b6fb8c6e1879881",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "state",
                "values": [
                  "available"
                ]
              },
              {
                "name": "tag:Name",
                "values": [
                  "platform"
                ]
              }
            ],
            "id": "vpc-0353c425617006396",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0ffad282522372bc1",
            "ipv6_cidr_block": "2600:1f18:766a:2a00::/56",
            "main_route_table_id": "rtb-002cd9eabd075872a",
            "owner_id": "021847444320",
            "tags": {
              "Name": "platform"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "remote_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021847444320:security-group/sg-048c394c72e6d01ea",
            "description": "Allow remote SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048c394c72e6d01ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nodes-remote-access20240306114144132900000004",
            "name_prefix": "nodes-remote-access",
            "owner_id": "021847444320",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0353c425617006396"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.instance"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    }
  ]
}